# Calculator

./: CMakeLists.txt  Calc1.cpp  Calc2.cpp  README.md  main.cpp
execute/: CMakeLists.txt  main.cpp
include/: Calculator.hpp
sources/: Calculator.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
